# automatic-accompaniment

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: test.yaml
auto_accompany/midi/: midi_output_sarh.mid
auto_accompany/pitch_detect/: model.py  record.py
scripts/: model.sh
src/api/: main.py
src/auto_accompany/: record.py  song_convert.py  vocal_analyze.ipynb
src/auto_accompany/midi/: midi_output.mid  midi_output_voice.mid
src/data_process/: chords_output.mid  generatemusic.py  hmm_model.ipynb  hmm_model_generate.py  midi_output.mid  song_analyze.py  vocal_file_analyze.ipynb
src/data_process/melody observation matrix/: melody_note.py
src/data_process/melody observation matrix/csv_file/: all_chord.csv  all_pitch.csv  all_pitch_sorted.csv
src/data_process/transition__chord_matrix/: transition_chord.csv  transition_chord.py  transition_chord_normalize_each_time.csv
src/data_process/transition__chord_matrix/csv_file/: transition_chord.csv  transition_chord_normalize_each_time.csv
src/data_process/transition_matrix/: transition_chord.csv  transition_chord.py
src/data_process/transition_melody_matrix/: all_chord.csv  all_pitch.csv  transition_melody.ipynb
src/lstm/: POP909_001_001.csv  data_preprocess.ipynb  main.ipynb  model.ipynb
src/lstm/csv_file/: all_chord.csv
tests/: test_song_convert.py
