[metadata]
name = auto_accompany
description = A Python package for automatic accompaniment generation.
platforms = Linux, Windows

[options]
packages=auto_accompany
install_requires =
    absl-py==1.4.0
    appdirs==1.4.4
    astunparse==1.6.3
    audioread==3.0.0
    autopep8==2.0.2
    basic-pitch==0.2.4
    cachetools==5.3.0
    certifi==2022.12.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    decorator==5.1.1
    flatbuffers==23.3.3
    future==0.18.3
    gast==0.4.0
    google-auth==2.17.3
    google-auth-oauthlib==0.4.6
    google-pasta==0.2.0
    grpcio==1.54.0
    h5py==3.8.0
    idna==3.4
    importlib-metadata==6.6.0
    joblib==1.2.0
    keras==2.11.0
    lazy_loader==0.2
    libclang==16.0.0
    librosa==0.10.0.post2
    llvmlite==0.39.1
    Markdown==3.4.3
    MarkupSafe==2.1.2
    mido==1.2.10
    mir-eval==0.7
    msgpack==1.0.5
    numba==0.56.4
    numpy==1.23.5
    oauthlib==3.2.2
    opt-einsum==3.3.0
    packaging==23.1
    pooch==1.6.0
    pretty-midi==0.2.10
    protobuf==3.19.6
    pyasn1==0.5.0
    pyasn1-modules==0.3.0
    pycodestyle==2.10.0
    pycparser==2.21
    requests==2.28.2
    requests-oauthlib==1.3.1
    resampy==0.4.2
    rsa==4.9
    scikit-learn==1.2.2
    scipy==1.10.1
    six==1.16.0
    sounddevice==0.4.6
    soundfile==0.12.1
    soxr==0.3.5
    tensorboard==2.11.2
    tensorboard-data-server==0.6.1
    tensorboard-plugin-wit==1.8.1
    tensorflow==2.11.1
    tensorflow-estimator==2.11.0
    tensorflow-intel==2.11.1
    tensorflow-io-gcs-filesystem==0.31.0
    termcolor==2.2.0
    threadpoolctl==3.1.0
    tomli==2.0.1
    typing_extensions==4.5.0
    urllib3==1.26.15
    wavio==0.0.7
    Werkzeug==2.2.3
    wrapt==1.15.0
    zipp==3.15.0

package_dir =
    =src

zip_safe = no

[options.extras_require]
testing = 
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24

[options.package_data]
auto_accompany = py.typed

[flake8]
max-line-length = 160